infrastructure/kubernetes/manifests/aio/europe-west2/tools/nexus/nexus-sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: nexus
  name: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  serviceName: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
        - image: sonatype/nexus3:3.20.1
          imagePullPolicy: Always
          name: nexus
          ports:
            - containerPort: 8081
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 500m
              memory: 4Gi
            requests:
              cpu: 10m
              memory: 1Gi
          volumeMounts:
            - mountPath: /nexus-data
              name: data
              readOnly: false
      securityContext:
        fsGroup: 200
        runAsGroup: 200
        runAsUser: 200
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 20Gi
---
