infrastructure/kubernetes/manifests/aio/europe-west2/tools/nexus/nexus-exposed-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-exposed
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  selector:
    app: nexus
  type: ClusterIP
---
